[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Hallway/player/movement.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Hallway/models/BasicHand_L.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Hallway/scripts/HandsController.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Hallway/models/BasicHand_R.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="Body" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Pivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.392134, 0 )

[node name="Camera" type="Camera" parent="Pivot"]
current = true
far = 110.0

[node name="HandsController" type="Spatial" parent="Pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.000134021, 0 )
script = ExtResource( 3 )

[node name="RightHand" parent="Pivot/HandsController" instance=ExtResource( 4 )]
transform = Transform( 0.029518, 0.0511267, 0.137894, -0.129904, 0.075, -1.34487e-08, -0.068947, -0.11942, 0.059036, 0.3, -0.541, -0.113 )

[node name="RightHandPos1" type="Spatial" parent="Pivot/HandsController"]
transform = Transform( 0.029518, 0.0511267, 0.137894, -0.129904, 0.075, -1.34487e-08, -0.068947, -0.11942, 0.059036, 0.3, -0.541, -0.113 )

[node name="RightHandPos2" type="Spatial" parent="Pivot/HandsController"]
transform = Transform( 0.0202892, 0.0297744, 0.145608, -0.0915616, 0.118262, -0.0114243, -0.117068, -0.0873357, 0.0341709, 0.32612, -0.316, -0.215 )

[node name="RightHandPos3" type="Spatial" parent="Pivot/HandsController"]
transform = Transform( -0.140613, -0.0106955, 0.0511226, -0.0242679, 0.143389, -0.0367504, -0.0462491, -0.0427216, -0.136147, 0.111, -0.293, -0.067 )

[node name="LeftHand" parent="Pivot/HandsController" instance=ExtResource( 2 )]
transform = Transform( -0.0297308, -0.0514953, 0.137711, -0.129904, 0.075, -8.90304e-09, -0.0688555, -0.119261, -0.0594617, -0.3, -0.541, -0.113 )

[node name="LeftHandPos1" type="Spatial" parent="Pivot/HandsController"]
transform = Transform( -0.0297308, -0.0514953, 0.137711, -0.129904, 0.075, -8.90304e-09, -0.0688555, -0.119261, -0.0594617, -0.3, -0.541, -0.113 )

[node name="LeftHandPos2" type="Spatial" parent="Pivot/HandsController"]
transform = Transform( -0.0338553, -0.0121441, 0.145624, -0.0915617, 0.118262, -0.0114244, -0.113887, -0.0914691, -0.0341049, -0.326, -0.316, -0.215 )

[node name="LeftHandPos3" type="Spatial" parent="Pivot/HandsController"]
transform = Transform( 0.14526, 0.0242959, 0.028446, -0.0290743, 0.145094, 0.0245428, -0.0235404, -0.029281, 0.145219, -0.087, -0.326, -0.05 )
